--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher3"
+        android:icon="@mipmap/timer"
         android:label="@string/app_name"
 
         android:supportsRtl="true"
